# devenv-test

./: .tmuxp.yaml  AGENTS.md  README.md  devenv.nix  devenv.yaml  flake.nix  pyproject.toml
src/quote_cli/: __init__.py  cli.py  models.py  quotes.py
