[project]
name = "quote-cli"
version = "0.1.0"
description = "A simple CLI that displays random quotes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "typer>=0.12.0",
]

[project.scripts]
quote = "quote_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
